k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: server-deployment
spec:
    replicas: 3
    selector: 
      matchLabels:
        component: server
    template:
        metadata:
          labels:
            component: server
        spec:
          containers:
              - name: server
                image: stephengrider/multi-server
                ports:
                  - containerPort: 5000
